# django-prefix-id

./: .flake8  README.md  pyproject.toml  requirements.txt  tox.ini
prefix_id/: __init__.py  base62.py  field.py
testapp/: models.py
testapp/migrations/: 0001_initial.py
testapp/tests/: test_base62.py  test_field.py  test_model.py
testproject/: settings.py
